Setting up on work laptop

--- a/Python Notebook.ipynb
+++ b/Python Notebook.ipynb
@@ -26,6 +26,17 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "print \"Bye World!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
@@ -45,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
